# tinned-mailserver-test-suite

./: .env.example  .envrc  .gitignore  .pre-commit-config.yaml  .typos.toml  Makefile  README.md  Testcases.md  diagnose_server.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: mailserver-tests.yml
imap-test/: 01-search-subject-sender.test  02-search-body.mbox  02-search-body.test
smtp-tests/: prepare.sh  run.sh  vars.example.conf
smtp-tests/templates/: swaks__101__outbound_submissions_authenticated_from_main.txt  swaks__101__outbound_submissions_authenticated_from_main__0.conf  swaks__101__outbound_submissions_plain-authenticated_from_main.conf  swaks__101__outbound_submissions_plain-authenticated_from_main.txt  swaks__102__outbound_submissions_authenticated_from_alias.txt  swaks__102__outbound_submissions_authenticated_from_alias__0.conf  swaks__102__outbound_submissions_plain-authenticated_from_alias.conf  swaks__102__outbound_submissions_plain-authenticated_from_alias.txt  swaks__103__outbound_submissions_authenticated_from_main+ext.txt  swaks__103__outbound_submissions_authenticated_from_main+ext__0.conf  swaks__103__outbound_submissions_plain-authenticated_from_main+ext.conf  (+59 more)
test/: test-001.conf  test-002.conf  test-003.conf  test-004.conf  test-005-invert.conf  test-006-invert.conf  test-010.conf  test-011-invert.conf  test-012-invert.conf  test-013-invert.conf  test-014-invert.conf  test-015-invert.conf  test-016-invert.conf  test-017-invert.conf  test-018-invert.conf
tests/: conftest.py  test_inbound.py  test_outbound.py
