[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mailserver-test-suite"
version = "1.0.0"
description = "A suite of mailserver integration tests"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Shane Jaroch", email = "chown_tee@proton.me"},
]
dependencies = [
    "pytest>=8.0.0",
    "python-dotenv>=1.0.0"
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.pylint.messages_control]
disable = [
    "redefined-outer-name",
    "unused-argument",
    "broad-exception-caught"
]

[tool.mypy]
ignore_missing_imports = true
